# USAM

./: .dockerignore  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.claude/agents/: 10_model_architect.md  20_conductor_engineer.md  30_losses_engineer.md  40_data_engineer.md  50_pipeline_engineer.md  60_training_engineer.md  70_inference_engineer.md  80_infra_engineer.md  90_test_engineer.md  95_doc_engineer.md  99_reviewer.md  README.md
configs/data/: agibot2026.yaml  bridge.yaml  droid.yaml  oxe_auge.yaml  rh20t.yaml  robomind.yaml
configs/data/camera_maps/: agibot2026.yaml  bridge.yaml  droid.yaml  oxe_auge.yaml  rh20t.yaml  robomind.yaml
configs/eval/: libero.yaml  realtime.yaml
configs/model/: usam_1_4b.yaml  usam_350m_smoke.yaml
configs/train/: adapter_pretrain.yaml  stage_b1_pretrain.yaml  stage_b2_finetune.yaml
docker/: Dockerfile.local_a40  Dockerfile.prep_a100  Dockerfile.train_h200  README.md
docs/: AGENT_CHARTER.md  ARCHITECTURE.md  DATA_FORMAT.md  DISK_SPACE_ESTIMATE.md  HOWTO_H200.md  HOWTO_LOCAL_8A40.md  HOWTO_SLURM_A100.md  IMPLEMENTATION_PLAN.md
docs/superpowers/plans/: 2026-05-09-dinov3-prep-image.md
docs/superpowers/specs/: 2026-05-09-dinov3-prep-image-design.md
lda/dataloader/: lerobot_datasets.py
lda/dataloader/gr00t_lerobot/: data_config.py  embodiment_tags.py  mixtures.py
lda/model/modules/action_model/flow_matching_head/mmdit/mmdit/: mmdit_cross_attn.py  rope_3d.py
prep/: _base.py  _hub.py  _validation.py  adapter_pretrain.py  dispatch.py  embodiment.json  run_pipeline.py  stage_1_index.py  stage_2b_compute_flow.py  stage_2c_compute_depth.py  stage_3_canonical.py  stage_4_dino_cache.py  stage_5_validate.py  stage_6_upload.py
prep/stage_0_download/: __init__.py  _common.py  agibot2026.py  bridge.py  droid.py  oxe_auge.py  rh20t.py  robomind.py
prep/stage_2a_to_lerobot/: __init__.py  __main__.py  _assemble.py  agibot2026.py  bridge.py  droid.py  oxe_auge.py  rh20t.py  robomind.py
requirements/: base.txt  eval.txt  prep.txt  train.txt
scripts/: e2e_droid_smoke.sh  e2e_robomind_smoke.sh  eval_libero.sh  make_sample_mp4.py  prep_render_sbatch.sh  prep_run_local.sh  prep_submit_slurm.sh  train_h200.sh  train_smoke_a40.sh
scripts/run_scripts/: run_lerobot_datasets_LDA.sh
slurm/: README.md  env.sh  job.sbatch  pipeline.sbatch.tmpl  pipeline_agibot2026.sbatch  pipeline_bridge.sbatch  pipeline_droid.sbatch  pipeline_robomind.sbatch
tests/: .ci_test_command.sh  conftest.py
tests/golden_data/: __init__.py  _synthesize_agibot.py  _synthesize_bridge.py  _synthesize_oxe_auge.py  _synthesize_rh20t.py  _synthesize_robomind.py  _synthesize_tiny_droid.py  build_fixtures.py
tests/integration/: test_dino_cache_real_weights.py  test_dino_cache_sharding.py  test_pipeline_end_to_end.py  test_smoke_realtime.py  test_smoke_train.py
tests/unit/: test_aux_heads.py  test_canonical_action.py  test_checkpointed_job.py  test_converters_per_source.py  test_dataloader.py  test_drift.py  test_finetune_libero.py  test_lora.py  test_losses.py  test_mmdit_kv_cache.py  test_plan_cache.py  test_prep_cli.py  test_run_pipeline.py  test_tri_dino.py
tools/train/: smoke_train_chunk0.py  smoke_train_long.py
tools/viz/: dinov3_pca_gallery.py
usam/: __init__.py  _train_helpers.py  finetune_libero.py  losses.py  train.py
usam/adapters/: __init__.py  lora.py
usam/aux_heads/: __init__.py  depth_consistency.py  flow_action.py
usam/conductor/: __init__.py  cache_dropout.py  classifier.py  conductor.py  drift.py  plan_cache.py
usam/dataloader/: __init__.py  feature_cache.py  mixtures.py  usam_lerobot.py
usam/encoders/: __init__.py  tri_dino.py
usam/inference/: __init__.py  openloop.py  realtime.py
